fix z-index issue

--- a/Markup/css/styles.css
+++ b/Markup/css/styles.css
@@ -701,7 +701,7 @@ a.btn-action {
 .left-pane {
     position: fixed;
     width: 18em;
-    z-index: 98;
+    z-index: 100;
     background-color: #222222;
     left: -18em;
     top: 53px;
